Fix node title spacing on homepage

--- a/css/lw-omega.styles.css
+++ b/css/lw-omega.styles.css
@@ -491,6 +491,10 @@ body {
 .view-list-of-published-articles .views-row .field--name-field-teaser-title-link a:hover {
   text-decoration: underline;
 }
+.view-nodequeue-1 .views-row .node__title,
+.view-list-of-published-articles .views-row .node__title {
+  margin: 3px 0;
+}
 
 .view-nodequeue-1 .panel-2col-stacked .center-wrapper,
 .view-nodequeue-2 .panel-2col-stacked .center-wrapper {
