--- a/sass/components/_homepage.scss
+++ b/sass/components/_homepage.scss
@@ -25,6 +25,10 @@
 				}
 			}
 		}
+
+		.node__title {
+			margin: 3px 0;
+		}
 	}
 }
 
